After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752504 - Gtk2: Fix crash on main window close button
Gtk2: Fix crash on main window close button
Status: RESOLVED FIXED
Product: dasher
Classification: Applications
Component: gtk
unspecified
Other All
: Normal normal
: ---
Assigned To: Patrick Welche
Patrick Welche
Depends on:
Blocks:
 
 
Reported: 2015-07-16 16:39 UTC by Yanko Kaneti
Modified: 2015-07-22 12:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Gtk2: Fix crash on main window close button (1.69 KB, patch)
2015-07-16 16:39 UTC, Yanko Kaneti
none Details | Review

Description Yanko Kaneti 2015-07-16 16:39:12 UTC
Redefine dasher_main_cb_window_close with the correct delete_event
signal callback handler signature.
Comment 1 Yanko Kaneti 2015-07-16 16:39:16 UTC
Created attachment 307575 [details] [review]
Gtk2: Fix crash on main window close button
Comment 2 Patrick Welche 2015-07-22 12:50:22 UTC
Thank you!

Committed in:
https://git.gnome.org/browse/dasher/commit/?id=014615eae5761c428d513632ff48f39bf7cfc1a7

(As a twm user, I never noticed - had to install metacity to see the problem...)