Gtk2: Fix crash on main window close button

Redefine dasher_main_cb_window_close with the correct delete_event
signal callback handler signature.

https://bugzilla.gnome.org/show_bug.cgi?id=752504